# Personal-Risk-Radar

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  GITHUB_DEPLOYMENT.md  LICENSE  README.md  STREAMLIT_DEPLOYMENT.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  setup.sh  test_api.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
api/: __init__.py  data_input.py  main.py  risks.py  signals.py
domain/: __init__.py  models.py  scoring.py
examples/: sample_risks.csv  sample_signals.csv
persistence/: __init__.py  database.py
scripts/: load_examples.py  run.py
tests/: __init__.py  test_api.py  test_domain.py  test_recompute.py  verify_system.py
