[project]
name = "personal-risk-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "ruff>=0.14.13",
    "streamlit>=1.53.0",
]

[project.scripts]
start = "streamlit run main.py"

[dependency-groups]
dev = [
    "ty>=0.0.12",
]
