[project]
name = "personal-risk-radar"
version = "0.1.0"
description = "A local-first system for modeling, tracking, and reasoning about risk over time"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "ruff>=0.14.13",
    "streamlit>=1.53.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
]

[project.scripts]
risk-radar = "python run.py"

[dependency-groups]
dev = [
    "ty>=0.0.12",
]
